[project]
name = "obohist"
version = "0.1.0"
description = "A queryable history of OBO ontology evolution, derived from git history."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastobo>=0.13",
    "duckdb>=1.1",
    "pyarrow>=17",
    "typer>=0.12",
    "rich>=13",
    "tqdm>=4.66",
]

[project.scripts]
obohist = "obohist.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/obohist"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"
